<resources>
    <string name="app_name">LindseyAssign2</string>
    <string name="pizza_pizza" translatable="false">Pizza Pizza</string>
    <string name="dominos_pizza" translatable="false">Dominos Pizza</string>
    <string name="pizza_hut" translatable="false">Pizza Hut</string>
    <string name="next">Next</string>
    <string name="thin_crust">Thin Crust</string>
    <string name="thick_crust">Thick Crust</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="red_pepper">Red Pepper</string>
    <string name="green_pepper">Green Pepper</string>
    <string name="black_olives">Black Olives</string>
    <string name="pepperoni" translatable="false">Pepperoni</string>
    <string name="cheese">Cheese</string>
    <string name="enter_credit_card_number">Enter Credit Card Number</string>
    <string name="payment_title">Payment</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="select_province">Select Province or Territory</string>
    <string name="order">Order</string>
    <string name="name">Enter name (3 char min)</string>
    <string name="review">Review</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="screen_snackbar">Try another button</string>
    <string name="help">Help!</string>
    <string name="menu_name" translatable="false">Lindsey</string>
    <string name="pizza" translatable="false">Pizza!</string>
    <string name="thin_crust_text">Thin Crust</string>
    <string name="thick_crust_text">Thick Crust</string>
    <string name="small_text">Small</string>
    <string name="medium_text">Medium</string>
    <string name="large_text">Large</string>
    <string name="cheese_text">Cheese</string>
    <string name="pepperoni_text">Pepperoni</string>
    <string name="black_olives_text">Black Olives</string>
    <string name="green_pepper_text">Green Pepper</string>
    <string name="red_pepper_text">Red Pepper</string>
    <string name="pizza_pizza_text">pizza pizza</string>
    <string name="dominos_pizza_text">domino\'s Pizza</string>
    <string name="pizza_hut_text">pizza hut</string>
    <string name="help_link">https://stackoverflow.com/</string>
    <string name="pizza_hut_link">https://www.pizzahut.ca/</string>
    <string name="pizza_pizza_link">https://www.pizzapizza.ca/store/1/delivery</string>
    <string name="dominos_link">https://www.dominos.ca/en/</string>
    <string name="your_order">Your order</string>
    <string name="pickup_confirm">Pickup: 30 Mins ; Confirmation Number: 123456789</string>
    <string name="confirm">Confirm</string>
    <string name="review_selections">Review Selections</string>
    <string name="select_options">Select options</string>
    <string name="select_store">Please select a store first</string>
    <string name="default">Default</string>

    <string-array name="provinces">
        <item>Alberta</item>
        <item>British Columbia</item>
        <item>Manitoba</item>
        <item>New Brunswick</item>
        <item>Northwest Territories</item>
        <item>Nova Scotia</item>
        <item>Nunavut</item>
        <item> Ontario</item>
        <item>Prince Edward Island</item>
        <item>Quebec</item>
        <item>Saskatchewan</item>
        <item>Yukon</item>
    </string-array>

</resources>